# insta-api-react

backend/: .gitignore  ig_api.db  main.py  pyproject.toml
backend/auth/: authentification.py  oauth2.py
backend/db/: database.py  db_comment.py  hashing.py  models.py  post_db.py  user_db.py
backend/routers/: comment.py  post.py  schemas.py  user.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Post.css  Post.js  RegForm.js
